WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49304
[Chromium] print doesn't work on
http://nodejs.org/api.html
https://bugs.webkit.org/show_bug.cgi?id=49304
Summary
[Chromium] print doesn't work on http://nodejs.org/api.html
Shinichiro Hamaji
Reported
2010-11-10 00:25:18 PST
We need to catch up with the API change introduced in
http://trac.webkit.org/changeset/64409
. Chromium side:
http://code.google.com/p/chromium/issues/detail?id=59777
Fixing this issue will fix the following layout tests as well:
BUG56246
: printing/css2.1/page-break-after-000.html = TEXT
BUG56246
: printing/css2.1/page-break-after-003.html = TEXT
BUG56246
: printing/css2.1/page-break-after-004.html = TEXT
BUG56246
: printing/css2.1/page-break-before-000.html = TEXT
Attachments
Patch v1
(3.36 KB, patch)
2010-11-10 00:28 PST
,
Shinichiro Hamaji
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinichiro Hamaji
Comment 1
2010-11-10 00:28:26 PST
Created
attachment 73464
[details]
Patch v1
Kent Tamura
Comment 2
2010-11-10 00:44:45 PST
Comment on
attachment 73464
[details]
Patch v1 looks ok.
WebKit Commit Bot
Comment 3
2010-11-13 02:27:30 PST
The commit-queue encountered the following flaky tests while processing
attachment 73464
[details]
: fast/workers/storage/use-same-database-in-page-and-workers.html compositing/iframes/overlapped-nested-iframes.html Please file bugs against the tests. These tests were authored by
dumi@chromium.org
and
simon.fraser@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2010-11-13 02:45:47 PST
The commit-queue encountered the following flaky tests while processing
attachment 73464
[details]
: compositing/iframes/overlapped-nested-iframes.html fast/workers/storage/use-same-database-in-page-and-workers.html Please file bugs against the tests. These tests were authored by
dumi@chromium.org
and
simon.fraser@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2010-11-13 03:02:37 PST
Comment on
attachment 73464
[details]
Patch v1 Clearing flags on attachment: 73464 Committed
r71964
: <
http://trac.webkit.org/changeset/71964
>
WebKit Commit Bot
Comment 6
2010-11-13 03:02:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug