2010-11-13  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Kent Tamura.

        [Chromium] print doesn't work on http://nodejs.org/api.html
        https://bugs.webkit.org/show_bug.cgi?id=49304

        * platform/chromium/test_expectations.txt:
2010-11-13  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Kent Tamura.

        [Chromium] print doesn't work on http://nodejs.org/api.html
        https://bugs.webkit.org/show_bug.cgi?id=49304

        * src/WebFrameImpl.cpp:
        (WebKit::ChromePrintContext::begin):
        (WebKit::WebFrameImpl::printBegin):

Canonical link: https://commits.webkit.org/62435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71964 268f45cc-cd09-0410-ab3c-d52691b4dbfc